--- a/ui/Cargo.toml
+++ b/ui/Cargo.toml
@@ -10,3 +10,4 @@ serde_json      = "^1.0.0"
 futures         = "^0.1.17"
 binding         = { path = "../binding" }
 desync          = "^0.1.1"
+typemap         = "^0.3.3"
