--- a/user_interfaces/cocoa_ui/Cargo.toml
+++ b/user_interfaces/cocoa_ui/Cargo.toml
@@ -9,6 +9,7 @@ description     = "User interface implementation for FlowBetween using the Cocoa
 
 [dependencies]
 flo_cocoa_pipe  = { path = "../cocoa_pipe", version = "0.1" }
+flo_gfx_canvas  = { path = "../gfx_canvas", version = "0.1", features = ["metal"] }
 flo_canvas      = { path = "../../canvas", version = "0.1" }
 flo_stream      = { git = "https://github.com/Logicalshift/flo_stream", version = "0.3" }
 flo_ui          = { path = "../../ui", version = "0.1" }
