Add metal as a dependency

--- a/user_interfaces/gfx_canvas/Cargo.toml
+++ b/user_interfaces/gfx_canvas/Cargo.toml
@@ -6,12 +6,12 @@ license             = "Apache-2.0"
 repository          = "https://github.com/Logicalshift/flowbetween"
 
 [features]
-metal               = ["gfx-backend-metal"]
-vulkan              = ["gfx-backend-vulkan"]
-gl                  = ["gfx-backend-gl"]
-wgl                 = ["gfx-backend-gl", "gfx-backend-gl/wgl"]
-dx11                = ["gfx-backend-dx11"]
-dx12                = ["gfx-backend-dx12"]
+render-metal        = ["gfx-backend-metal", "metal"]
+render-vulkan       = ["gfx-backend-vulkan"]
+render-gl           = ["gfx-backend-gl"]
+render-wgl          = ["gfx-backend-gl", "gfx-backend-gl/wgl"]
+render-dx11         = ["gfx-backend-dx11"]
+render-dx12         = ["gfx-backend-dx12"]
 
 [dependencies]
 flo_canvas          = { version = "^0.1.0", path="../../canvas" }
@@ -21,4 +21,5 @@ gfx-backend-metal   = { version = "0.4", optional = true }
 gfx-backend-vulkan  = { version = "0.4", optional = true }
 gfx-backend-dx11    = { version = "0.4", optional = true }
 gfx-backend-dx12    = { version = "0.4", optional = true }
+metal               = { version = "0.17", optional = true }
 lyon                = "0.14"
