--- a/user_interfaces/flo_cocoa/Cargo.toml
+++ b/user_interfaces/flo_cocoa/Cargo.toml
@@ -24,6 +24,7 @@ flo_cocoa_pipe      = { path = "../cocoa_pipe",     version="0.1" }
 flo_cocoa_ui        = { path = "../cocoa_ui",       version="0.1" }
 
 objc                = "0.2"
+metal               = "0.17"
 futures             = "0.1"
 serde               = "1.0"
 serde_derive        = "1.0"
