--- a/user_interfaces/cocoa_ui/Cargo.toml
+++ b/user_interfaces/cocoa_ui/Cargo.toml
@@ -8,15 +8,17 @@ repository      = "https://github.com/Logicalshift/flowbetween"
 description     = "User interface implementation for FlowBetween using the Cocoa API"
 
 [dependencies]
-flo_cocoa_pipe  = { path = "../cocoa_pipe", version = "0.1" }
-flo_gfx_canvas  = { path = "../gfx_canvas", version = "0.1", features = ["render-metal"] }
-flo_canvas      = { path = "../../canvas", version = "0.1" }
-flo_stream      = { git = "https://github.com/Logicalshift/flo_stream", version = "0.3" }
-flo_ui          = { path = "../../ui", version = "0.1" }
+flo_cocoa_pipe      = { path = "../cocoa_pipe", version = "0.1" }
+flo_gfx_canvas      = { path = "../gfx_canvas", version = "0.1", features = ["render-metal"] }
+flo_canvas          = { path = "../../canvas", version = "0.1" }
+flo_stream          = { git = "https://github.com/Logicalshift/flo_stream", version = "0.3" }
+flo_ui              = { path = "../../ui", version = "0.1" }
 
-lazy_static     = "1.2"
-futures         = "0.1"
-cocoa           = "0.19"
-core-foundation = "0.6"
-objc            = "0.2"
-num-traits      = "0.2"
+lazy_static         = "1.2"
+futures             = "0.1"
+cocoa               = "0.19"
+core-foundation     = "0.6"
+objc                = "0.2.4"
+num-traits          = "0.2"
+metal               = "0.17"
+gfx-backend-metal   = "0.4"
