--- a/user_interfaces/cocoa_ui/Cargo.toml
+++ b/user_interfaces/cocoa_ui/Cargo.toml
@@ -21,4 +21,5 @@ core-foundation     = "0.6"
 objc                = "0.2.4"
 num-traits          = "0.2"
 metal               = "0.17"
+gfx-hal             = "0.4"
 gfx-backend-metal   = "0.4"
